--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Person List</title>
+        <title>Person Data</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}">    
    </head>
     <body>
